tests/functional/lang/eval-fail-overflowing-add.err.exp
error: integer overflow in adding 9223372036854775807 + 1
       at /pwd/lang/eval-fail-overflowing-add.nix:4:8:
            3|   b = 1;
            4| in a + b
             |        ^
            5|
